Fix context menu not showing up

--- a/styles/scss/components/_forms.scss
+++ b/styles/scss/components/_forms.scss
@@ -735,8 +735,6 @@
 			border-radius: 12px;
 			color: var(--pfu-color-app-section-content-secondary) !important;
 
-			overflow: hidden;
-
 			display: flex;
 			flex-direction: column;
 			align-items: center;
